<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/category_general" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="animation"
        android:summary="@string/preferences_animation_summary"
        android:title="@string/preferences_animation_title" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="general_notification"
        android:summary="@string/preferences_general_notification_summary"
        android:title="@string/preferences_general_notification_title" />
    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:key="notification_sound"
        android:ringtoneType="notification"
        android:showDefault="true"
        android:showSilent="true"
        android:summary="@string/preferences_notification_sound_summary"
        android:title="@string/preferences_notification_sound_title" />
    <Preference
        android:defaultValue="true"
        android:key="date_format"
        android:title="@string/preferences_date_format_title"
        android:summary="@string/preferences_date_format_summary"/>
    <PreferenceCategory android:title="@string/category_backup_and_restore" />
    <Preference
        android:key="backup"
        android:summary="@string/preferences_backup_create_summary"
        android:title="@string/preferences_backup_create_title" />
    <Preference
        android:key="restore"
        android:summary="@string/preferences_backup_restore_summary"
        android:title="@string/preferences_backup_restore_title" />
    <PreferenceCategory android:title="@string/category_additional" />

    <Preference
        android:key="send_feedback"
        android:onClick="onMultipleIncludeOwnClick"
        android:summary="@string/preferences_send_feedback_summary"
        android:title="@string/preferences_send_feedback_title" />
    <Preference
        android:key="get_location"
        android:summary="Tap to know your Location"
        android:title="Location" />
    <Preference
        android:key="Calci"
        android:summary="Know your total"
        android:title="Calculator" />

    <PreferenceCategory android:title="@string/category_about" />
    <Preference
        android:key="about_version"
        android:summary="1.0"
        android:title="@string/preferences_about_version_title" />
    <Preference
        android:key="about_licenses"
        android:onClick="onMultipleIncludeOwnClick"
        android:summary="@string/preferences_about_licenses_summary"
        android:title="@string/preferences_about_licenses_title" />
</PreferenceScreen>